Fix alignment of map, scoreboxes on city-info page.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,7 +34,6 @@ div.scorebox {
 
 #map {
     height: 400px;
-    width: 600px;
 }
 
 /* #header-bar div {
